feat: restrict custom reporter attributes
Define extensible list of sensitive attributes that are filtered from audit records.
Expose opt-in list of event types where custom attributes are allowed.

AM-7554
