# gravitee-am-repository/gravitee-am-repository-mongodb/src/main/java/io/gravitee/am/repository/mongodb/management/internal/model/ReporterMongo.java
@@ -75,6 +75,8 @@ public class ReporterMongo extends Auditable {
 
     private List<ReporterAttributeMappingMongo> attributeMappings;
 
+    private List<String> attributeMappingEventTypes;
+
     private String managedBy;
 
 }
