# gravitee-am-service/src/main/java/io/gravitee/am/service/model/NewReporter.java
@@ -20,6 +20,7 @@ import jakarta.validation.constraints.NotNull;
 import lombok.Data;
 
 import java.util.List;
+import java.util.Set;
 
 /**
  * @author Titouan COMPIEGNE (titouan.compiegne at graviteesource.com)
@@ -47,6 +48,8 @@ public class NewReporter {
      * Additional attributes to export alongside the regular payload.
      */
     private List<ReporterAttributeMapping> attributeMappings;
+
+    private Set<String> attributeMappingEventTypes;
 
     @Override
     public String toString() {
